--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.1",
+    "react-native-gesture-handler": "^1.5.1",
+    "react-native-side-drawer": "^1.2.5",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.2",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
